--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,28 @@
+body{
+  font-family: Helvetica;
+  font-size: 14px;
+  text-align: center;
+}
+
 h1 {
   font-weight: bold;
   font-size: 50px;
+}
+
+footer{
+  background-color: dimgray;
+  text-align: left;
+  color: white;
+}
+
+footer p {
+  display: inline;
+}
+
+footer a:-webkit-any-link {
+  color: white;
+}
+
+#copy{
+  font-size: 11px;
 }
