Add nav div and btn-nav class.  Adjust font-size of nav to 18px

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -19,8 +19,10 @@ footer p {
   display: inline;
 }
 
-footer a:-webkit-any-link {
+.btn-nav {
+  display: inline;
   color: white;
+  font-size: 18px;
 }
 
 #copy{
