--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -7,6 +7,11 @@ body{
 h1 {
   font-weight: bold;
   font-size: 50px;
+  color: white;
+}
+
+header{
+  background-image: url(../images/the-flatiron-building.png);
 }
 
 footer{
@@ -15,16 +20,16 @@ footer{
   color: white;
 }
 
-footer p {
-  display: inline;
-}
-
 .btn-nav {
-  display: inline;
   color: white;
   font-size: 18px;
 }
 
+footer nav{
+  display: inline;
+}
+
 #copy{
   font-size: 11px;
+  display: inline;
 }
